--- a/Mandatory_01/01_data_formats/node/package.json
+++ b/Mandatory_01/01_data_formats/node/package.json
@@ -1,5 +1,8 @@
 {
   "dependencies": {
-    "express": "^4.18.3"
+    "csv-parser": "^3.0.0",
+    "express": "^4.18.3",
+    "js-yaml": "^4.1.0",
+    "xml2js": "^0.6.2"
   }
 }
