noget kode doku

--- a/05_python_enviroments/03_poetry/pyproject.toml
+++ b/05_python_enviroments/03_poetry/pyproject.toml
@@ -7,7 +7,7 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.12"
-emoji = "^2.12.1"
+emoji = "^2.12.1" # emoji pakken
 
 
 [build-system]
